--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test": "jest",
     "test.watch": "jest --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "plugin-comm": "github:calleboketoft/plugin-comm"
+  },
   "devDependencies": {
     "@stencil/core": "^0.9.1",
     "@stencil/dev-server": "latest",
